# Coding

./: .clang-format  .gitignore  2122D.cpp  D.cpp  Readme.md  in.txt  main  main.cpp  rand_test.sh  run.sh  std  std.cpp  test_gen.py  treap.cpp
history/: 0.cpp  1324A.cpp  1324B.cpp  1324C.cpp  1324D.cpp  1324E.cpp  1324F.cpp  1798D.cpp  2020D.cpp  2024A.cpp  2024B.cpp  2024C.cpp  2024D1.cpp  2024D2.cpp  2026A.cpp  2026B.cpp  2026C.cpp  2026D.cpp  2026E.cpp  2030A.cpp  2030B.cpp  2030C.cpp  2030D.cpp  2032A.cpp  2032B.cpp  2032C.cpp  2032D.cpp  2032E.cpp  2034B.cpp  2034C.cpp  2034D.cpp  2035A.cpp  2035B.cpp  2035C.cpp  2035D.cpp  2035E.cpp  2039A.cpp  2039B.cpp  2039C.cpp  2039C1.cpp  (+159 more)
sol/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  H1.cpp  I.cpp  J.cpp  K.cpp  L.cpp
template/: Modint.cpp  __lg.cpp  bitwise_index_tree.cpp  compiler_check.cpp  dinic.cpp  dsu.cpp  edge.cpp  fenwick_tree.cpp  max_control_flow.cpp  modIntFac.cpp  mod_int_jls.cpp  quickMul.cpp  segtree.cpp  segtree_01.cpp  treap_no_rotate.cpp  treap_rotate.cpp
test_results/: input_20250723_201531.txt  input_20250723_223001.txt  output_main.txt
